objects/ASI_CRM_Data_Completeness__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_As_Of_Date__c</fullName>
        <label>As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Division_Code__c</fullName>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Category_Eng_Name__c</fullName>
        <label>Category Eng Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7T1 Depletion (Out)</fullName>
                </value>
                <value>
                    <fullName>JDE Shipment</fullName>
                </value>
                <value>
                    <fullName>T2/3 Depletion (Out)</fullName>
                </value>
                <value>
                    <fullName>City Official</fullName>
                </value>
                <value>
                    <fullName>Outlet Offtake</fullName>
                </value>
                <value>
                    <fullName>T2/3 Balance</fullName>
                </value>
                <value>
                    <fullName>Outlet Empty Bottle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Category_Name__c</fullName>
        <label>Category Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7T1 Depletion (Out)</fullName>
                </value>
                <value>
                    <fullName>JDE Shipment</fullName>
                </value>
                <value>
                    <fullName>T2/3 Depletion (Out)</fullName>
                </value>
                <value>
                    <fullName>City Official</fullName>
                </value>
                <value>
                    <fullName>Outlet Offtake</fullName>
                </value>
                <value>
                    <fullName>T2/3 Balance</fullName>
                </value>
                <value>
                    <fullName>Outlet Empty Bottle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Data_Category__c</fullName>
        <label>Data Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipLabel>Data Completeness</relationshipLabel>
        <relationshipName>Data_Completeness</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_Code__c</fullName>
        <label>Category Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Data Completeness</label>
    <listViews>
        <fullName>ASI_CRM_CN_Data_Completeness</fullName>
        <columns>ASI_CRM_Region__c</columns>
        <columns>Category_Code__c</columns>
        <columns>ASI_CRM_Category_Eng_Name__c</columns>
        <columns>ASI_CRM_Category_Name__c</columns>
        <columns>ASI_CRM_As_Of_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>CN Data Completeness</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_CRM_Region__c</columns>
        <columns>Category_Code__c</columns>
        <columns>ASI_CRM_Category_Eng_Name__c</columns>
        <columns>ASI_CRM_Category_Name__c</columns>
        <columns>ASI_CRM_As_Of_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ASI_CRM_Data_Completeness Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Completeness</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Data_Completeness</fullName>
        <active>true</active>
        <label>ASI CRM CN Data Completeness</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>